[package]
name = "bakalari-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
futures-io = "0.3.30"
http = "1.1.0"
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.132"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
